--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,18 @@
 .App {
-  position: absolute;
   display: flex;
   flex-direction: row;
   background: fixed left/128px url(./logo.svg) repeat;
+}
+
+.ModalOverlay, .App {
+  position: absolute;
   width: 100%;
   top: 0;
   bottom: 0;
+}
+
+.ModalOverlay {
+  background: rgba(0,0,0,0.5);
 }
 
 .LeftPane, .RightPane {
@@ -13,14 +20,20 @@
   margin: 2vw;
 }
 
-.LeftPane, .RightPane, .Cell, .ColorPicker, .ColorBox, .ColorEditButton {
+.LeftPane, .RightPane, .Cell, .ColorPicker, .ColorBox, .ColorEditButton, .ColorPickerItem, .Codes {
   border-width: 1px;
   border-style: solid;
   border-color: black;
+  overflow: hidden;
 }
 
-.LeftPane, .RightPane, .ColorPicker, .ColorBox, .ColorEditButton {
+.LeftPane, .RightPane, .ColorPicker, .ColorBox, .ColorEditButton, .ColorPickerItem, .Codes {
   border-radius: 0.5vw;
+}
+
+.ColorBox.Focused {
+  border-color: yellowgreen;
+  border-width: 4px;
 }
 
 .LeftPane {
@@ -34,6 +47,10 @@
 
 .Codes {
   background-color: lightgray;
+  margin: 2vw;
+}
+
+.Code {
 }
 
 .Table {
@@ -65,6 +82,7 @@
 }
 
 .ColorBox {
+  box-sizing: border-box;
   height: 3vw;
   margin-bottom: 1.5vw;
   display: flex;
@@ -74,7 +92,6 @@
 
 .ColorBox.Multicolor {
   flex-direction: row;
-  overflow: hidden;
 }
 
 .ColorEditButton {
@@ -86,4 +103,40 @@
 .MulticolorPart {
   flex: 1;
   height: 100%;
+  transform: skew(-15deg, 0deg) scaleX(1.1);
+}
+
+.Modal {
+  background-color: white;
+  position: absolute;
+  top: 5vw;
+  bottom: 5vw;
+  left: 5vw;
+  right: 5vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.ModalContents {
+  flex: 1;
+}
+
+.ModalButton {
+  height: 3vw;
+}
+
+.ColorPickerItems {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: flex-start;
+}
+
+.ColorPickerItem {
+  width: 10vw;
+  height: 10vw;
+  margin-top: 1vw;
+  margin-left: 1vw;
 }
