--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,8 @@
 }
 
 .Code {
+  margin: 0.5vw;
+  font-size: 2vw;
 }
 
 .Table {
@@ -139,4 +141,19 @@
   height: 10vw;
   margin-top: 1vw;
   margin-left: 1vw;
+}
+
+@media (max-width: 750px) {
+  .App {
+    flex-direction: column;
+  }
+
+  .LeftPane {
+    flex: content;
+  }
+
+  .RightPane {
+    flex: content;
+    flex-grow: unset;
+  }
 }
